Update gradle properties file

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,8 @@ loader_version=3.4.2
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
-
-# Dependencies
-rusted_iron_core_version=1.4.0
+maven_group=com.jeffyjamzhd
+archives_base_name=MiTE-Presence-Footsteps
 
 # Run Properties
 user_name=Dev
